--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,8 @@ jobs:
           west update
           west zephyr-export
           pip install -r zephyr/scripts/requirements.txt
+          pip install grpcio-tools==1.47.0
+          pip install protobuf==3.20.3
           git config --global --add safe.directory $PWD
 
       - name: West build
