--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Print environment variables
+        run: env
+
       - name: Set up build tools
         run: |
           apt-get update
@@ -96,6 +99,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Print environment variables
+        run: env
+      
       - name: Download artifacts
         uses: actions/download-artifact@v3
         with:
